--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Russian travel</title>
+  <title>Путешествия по России</title> 
 </head>
 <body>
   <div class="page">
@@ -22,7 +22,7 @@
         </a>
         <ul class="header__lang-list">
           <li class="header__lang-item">
-            <a class="header__lang-link" href="#">Ru</a>
+            <a class="header__lang-link accent" href="#">Ru</a>
           </li>
           <li class="header__lang-item">
             <a class="header__lang-link" href="#">En</a>
@@ -38,7 +38,7 @@
           <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
         </figure>
       </section>
-      <section class="intro">
+      <!-- <section class="intro">
         <article class="intro__article">
           <h2 class="intro__title">Чего мы там не видели?</h2>
           <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
@@ -60,8 +60,8 @@
             </li>
           </ul>
         </article>
-      </section>
-      <section class="photos">
+      </section> -->
+      <!-- <section class="photos">
         <ul class="photos__list">
           <li class="photos__item">
             <a href="#">
@@ -122,6 +122,26 @@
             <a href="#">
               <img class="photos__image" src="./images/photo-grid-ergaki.jpg" alt="горные вершины в тумане">
             </a>
+          </li>
+        </ul>
+      </section> -->
+      <section class="places">
+        <ul class="places__list">
+          <li class="places__item">
+            <article class="location">
+              <h2 class="location__title">Куршская коса</h2>
+              <div class="location__wrap-link">
+                <p class="location__url-link">url</p>
+                <a class="location__link accent" href="http://park-kosa.ru">park-kosa.ru</a>
+              </div>
+              <img class="location__image" src="./images/place-kosa.jpg" alt="фото куршской косы">
+              <div>
+                <p class="location__text">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона 
+                  на краю российского анклава.</p>
+                <p class="location__text">На этом Калининградская область не заканчивается. 
+                  Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+              </div>
+            </article>
           </li>
         </ul>
       </section>
