--- a/index.html
+++ b/index.html
@@ -64,62 +64,62 @@
       <section class="photos">
         <ul class="photos__list">
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-train.jpg" alt="вид из окна поезда">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="вид заснеженной горы сверху">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-tuman.jpg" alt="собака стоящая на стоге сена">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-sochi.jpg" alt="ели в тумане">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-arisa.jpg" alt="колесо авто стоящего на льду">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-baikal.jpg" alt="берег озера байкал">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-elbrus.jpg" alt="заснеженная вершина горы эльбрус">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-kondratiev.jpg" alt="дорожный знак пешеходный переход">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-kamchatka-1.jpg" alt="горы камчатки">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-kamchatka-2.jpg" alt="заснеженная гора камчатки">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-baikal-2.jpg" alt="скалы у берега байкала">
             </a>
           </li>
           <li class="photos__item">
-            <a href="#">
+            <a class="fading" href="#">
               <img class="photos__image" src="./images/photo-grid-ergaki.jpg" alt="горные вершины в тумане">
             </a>
           </li>
@@ -143,20 +143,99 @@
               </div>
             </article>
           </li>
+          <li class="places__item">
+            <article class="location">
+              <h2 class="location__title">Кольский</h2>
+              <div class="location__wrap-link">
+                <p class="location__url-link">url</p>
+                <a class="location__link accent fading" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+              </div>
+              <img class="location__image" src="./images/place-kolsky.jpg" alt="фото Кольский">
+              <div>
+                <p class="location__text">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+                <p class="location__text">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
+              </div>
+            </article>
+          </li>
+          <li class="places__item">
+            <article class="location">
+              <h2 class="location__title">Алтай</h2>
+              <div class="location__wrap-link">
+                <p class="location__url-link">url</p>
+                <a class="location__link accent fading" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube
+                </a>
+              </div>
+              <img class="location__image" src="./images/place-altai.jpg" alt="фото ноутбука на фоне природы">
+              <div>
+                <p class="location__text">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
+                <p class="location__text">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
+              </div>
+            </article>
+          </li>
+          <li class="places__item">
+            <article class="location">
+              <h2 class="location__title">Зимний Байкал</h2>
+              <div class="location__wrap-link">
+                <p class="location__url-link">url</p>
+                <a class="location__link accent fading" href="https://vk.com/baikalmile">https://vk.com/baikalmile
+                </a>
+              </div>
+              <img class="location__image" src="./images/place-winter-baikal.jpg" alt="фото зимнего озера Байкал">
+              <div>
+                <p class="location__text">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
+                <p class="location__text">Конечно, это всё так. Но Байкал ещё идеальное место для 
+                  соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
+                  к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+              </div>
+            </article>
+          </li>
+          <li class="places__item">
+            <article class="location">
+              <h2 class="location__title">Карелия</h2>
+              <div class="location__wrap-link">
+                <p class="location__url-link">url</p>
+                <a class="location__link accent fading" href="http://vodlozero.ru">http://vodlozero.ru/
+                </a>
+              </div>
+              <img class="location__image" src="./images/place-karelia.jpg" alt="фото зимнего озера Байкал">
+              <div>
+                <p class="location__text">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
+              </div>
+            </article>
+          </li>
         </ul>
       </section>
       <section class="cover">
-        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <div class="cover__wrap-content">
           <div class="cover__wrap-text">
             <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__text">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
           </div>
-          <img class="cover__image" src="./images/cover-trains.jpg" alt="изображение железнодорожных вагонов">
-        </a>
+          <a class="cover__link cover__link_hover_on" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+            <img class="cover__image" src="./images/cover-trains.jpg" alt="изображение железнодорожных вагонов">
+          </a>
+        </div>
       </section>
     </main>
     <footer class="footer">
-
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a class="footer__link fading" href="https://yandex.ru/maps">Карты</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link fading" href="https://yandex.ru/pogoda">Погода</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link fading" href="https://rasp.yandex.ru">Расписание</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link fading" href="https://calendar.yandex.ru">Календарь</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link fading" href="https://travel.yandex.ru">Путешествия</a>
+        </li>
+      </ul>
+      <p class="footer__copyright">&copy; 2022. Дмитрий Пензев</p>
     </footer>
   </div>
 </body>
