--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
   <div class="page">
     <header class="header">
-        <a href="#" class="header__logo fading">
-          <svg width="177" height="52" viewBox="0 0 177 52" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <div class="header__wrap">
+        <a href="#">
+          <svg class="header__logo" width="177" height="52" viewBox="0 0 177 52" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M7.79073 23.3826L10.4447 22.0738L14.6397 15.7919L15.9239 15.2685L17.2937 21.6376L15.4958 21.8993L14.126 19.2819L13.0987 23.3826H17.6361L22.3448 24.604L24.2283 23.3826L27.396 26.698L28.7658 20.5906L30.9917 22.8591L32.3615 20.9396L34.5874 20.3289L37.8407 17.2752L38.3543 15.7919L41.0083 16.2282L42.1213 17.7114L40.1522 21.8993L45.0321 19.3691V18.1476L46.9156 17.7114L48.9703 19.8054L51.025 17.2752V15.5302L54.3639 13.1745L55.7337 11.1678H57.874L61.6409 3.40268L64.8942 0L66.0927 1.91946L64.2093 4.36242L64.8942 5.93289L66.692 6.28188L68.1474 12.7383V18.1476L70.7158 21.7248L72 26.698L67.5482 23.8188L65.5791 15.5302L64.3805 15.7919L64.2093 21.3758L60.956 26.698L60.0143 34.8121L62.2402 35.3356L63.1819 34.2013L65.3222 36.6443L66.9489 43.9732L66.7776 48.6846H64.723L63.9524 42.0537L62.497 44.0604L59.3294 43.3624L56.761 41.1812L53.8502 42.2282L54.0214 46.9396L51.7099 47.5503L48.2854 50.1678L44.176 49.6443L42.5494 48.6846L39.981 49.1208L40.8371 50.1678L38.7824 51.3893L37.1558 50.604L34.0737 52L29.365 49.6443L27.5672 45.4564L26.0262 45.6309L24.2283 44.1477L24.1427 43.0134L18.4067 42.4027L17.4649 45.5436L13.8692 43.8859L12.0713 40.8322H8.21879L7.79073 45.7181L5.5648 46.4161L4.45184 50.8658L3.59572 50.0805L0 40.745L4.28062 38.651L3.59572 34.5503L2.91082 30.3624L4.79429 27.6577L4.19501 26L6.76338 23.2081L7.79073 23.3826ZM64.723 33.6779L68.6611 39.6107L69.9453 39.0872L68.3187 36.6443L64.723 32.8054V33.6779ZM24.4851 21.6376V19.8926L27.4816 17.7114L30.0499 16.4027H27.0535L24.3995 17.9732L22.7729 19.4564V21.6376H24.4851Z" fill="white"/>
             <path d="M90.125 41.0004H94.8636V35.8186H97.4886C101.469 35.8186 104.136 33.4749 104.136 29.7164C104.136 26.0004 101.537 23.5459 97.6591 23.5459H90.125V41.0004ZM94.8636 32.1368V27.33H96.5341C98.196 27.33 99.1932 28.2164 99.1932 29.7164C99.1932 31.2078 98.196 32.1368 96.5341 32.1368H94.8636Z" fill="white"/>
             <path d="M111.969 41.2391C116.23 41.2391 118.753 38.5118 118.753 34.4891C118.753 30.4664 116.23 27.7391 111.969 27.7391C107.707 27.7391 105.185 30.4664 105.185 34.4891C105.185 38.5118 107.707 41.2391 111.969 41.2391ZM112.003 37.7618C110.741 37.7618 109.991 36.509 109.991 34.455C109.991 32.401 110.741 31.1482 112.003 31.1482C113.196 31.1482 113.946 32.401 113.946 34.455C113.946 36.509 113.196 37.7618 112.003 37.7618Z" fill="white"/>
@@ -22,41 +23,44 @@
         </a>
         <ul class="header__lang-list">
           <li class="header__lang-item">
-            <a class="header__lang-link accent fading" href="#">Ru</a>
+            <a class="header__lang-link header__lang-link_active_true fading" href="#">Ru</a>
           </li>
           <li class="header__lang-item">
             <a class="header__lang-link fading" href="#">En</a>
           </li>
         </ul>
+      </div>
     </header>
-    <main class="content">
+    <main>
       <section class="lead">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <figure class="lead__image-wrap">
+        <div class="lead__wrap">
+          <h1 class="lead__title">Путешествия по России</h1>
+          <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+          <figure class="lead__image-wrap">
           <img class="lead__image" src="./images/lead-polka.jpg" alt="девушка лежит на полке в железнодорожном вагоне, поверх фото наложена схема маршрута Псков-Улан-Удэ">
-          <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
-        </figure>
+            <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+          </figure>
+        </div>
       </section>
       <section class="intro">
         <article class="intro__article">
-          <h2 class="intro__title">Чего мы там не видели?</h2>
+          <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
           <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
           <ul class="intro__list">
             <li>
-              <p class="intro__list-unit">Часовых поясов 11</p>
+              <p class="intro__list-unit">Часовых поясов <span class="intro__weight-normal">11</span></p>
             </li>
             <li>
-              <p class="intro__list-unit">Объектов природного наследия ЮНЕСКО 12</p>
+              <p class="intro__list-unit">Объектов природного наследия ЮНЕСКО <span class="intro__weight-normal">12</span></p>
             </li>
             <li>
-              <p class="intro__list-unit">Объектов культурного наследия ЮНЕСКО 16</p>
+              <p class="intro__list-unit">Объектов культурного наследия ЮНЕСКО <span class="intro__weight-normal">16</span></p>
             </li>
             <li>
-              <p class="intro__list-unit">Природных заповедников 105</p>
+              <p class="intro__list-unit">Природных заповедников <span class="intro__weight-normal">105</span></p>
             </li>
             <li>
-              <p class="intro__list-unit">Аэропортов 241</p>
+              <p class="intro__list-unit">Аэропортов <span class="intro__weight-normal">241</span></p>
             </li>
           </ul>
         </article>
@@ -132,7 +136,7 @@
               <h2 class="location__title">Куршская коса</h2>
               <div class="location__wrap-link">
                 <p class="location__url-link">url</p>
-                <a class="location__link accent fading" href="http://park-kosa.ru">park-kosa.ru</a>
+                <a class="location__link location__link_decor_underline fading" href="http://park-kosa.ru">park-kosa.ru</a>
               </div>
               <img class="location__image" src="./images/place-kosa.jpg" alt="фото куршской косы">
               <div>
@@ -148,7 +152,7 @@
               <h2 class="location__title">Кольский</h2>
               <div class="location__wrap-link">
                 <p class="location__url-link">url</p>
-                <a class="location__link accent fading" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+                <a class="location__link location__link_decor_underline fading" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
               </div>
               <img class="location__image" src="./images/place-kolsky.jpg" alt="фото Кольский">
               <div>
@@ -162,7 +166,7 @@
               <h2 class="location__title">Алтай</h2>
               <div class="location__wrap-link">
                 <p class="location__url-link">url</p>
-                <a class="location__link accent fading" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube
+                <a class="location__link location__link_decor_underline fading" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube
                 </a>
               </div>
               <img class="location__image" src="./images/place-altai.jpg" alt="фото ноутбука на фоне природы">
@@ -177,7 +181,7 @@
               <h2 class="location__title">Зимний Байкал</h2>
               <div class="location__wrap-link">
                 <p class="location__url-link">url</p>
-                <a class="location__link accent fading" href="https://vk.com/baikalmile">https://vk.com/baikalmile
+                <a class="location__link location__link_decor_underline fading" href="https://vk.com/baikalmile">https://vk.com/baikalmile
                 </a>
               </div>
               <img class="location__image" src="./images/place-winter-baikal.jpg" alt="фото зимнего озера Байкал">
@@ -194,7 +198,7 @@
               <h2 class="location__title">Карелия</h2>
               <div class="location__wrap-link">
                 <p class="location__url-link">url</p>
-                <a class="location__link accent fading" href="http://vodlozero.ru">http://vodlozero.ru/
+                <a class="location__link location__link_decor_underline fading" href="http://vodlozero.ru">http://vodlozero.ru/
                 </a>
               </div>
               <img class="location__image" src="./images/place-karelia.jpg" alt="фото зимнего озера Байкал">
@@ -206,10 +210,10 @@
         </ul>
       </section>
       <section class="cover">
-        <a class="cover__link cover__link_hover_on" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
             <div class="cover__wrap-content">
               <img class="cover__image" src="./images/cover-trains.jpg" alt="изображение железнодорожных вагонов">
-              <div class="cover__wrap-text">
+              <div class="cover__overlay cover__overlay_hover_on">
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__text">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
               </div>
@@ -218,24 +222,26 @@
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__list">
-        <li class="footer__item">
-          <a class="footer__link fading" href="https://yandex.ru/maps">Карты</a>
-        </li>
-        <li class="footer__item">
-          <a class="footer__link fading" href="https://yandex.ru/pogoda">Погода</a>
-        </li>
-        <li class="footer__item">
-          <a class="footer__link fading" href="https://rasp.yandex.ru">Расписание</a>
-        </li>
-        <li class="footer__item">
-          <a class="footer__link fading" href="https://calendar.yandex.ru">Календарь</a>
-        </li>
-        <li class="footer__item">
-          <a class="footer__link fading" href="https://travel.yandex.ru">Путешествия</a>
-        </li>
-      </ul>
-      <p class="footer__copyright">&copy; 2022. Дмитрий Пензев</p>
+      <div class="footer__wrap">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link fading" href="https://yandex.ru/maps">Карты</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link fading" href="https://yandex.ru/pogoda">Погода</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link fading" href="https://rasp.yandex.ru">Расписание</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link fading" href="https://calendar.yandex.ru">Календарь</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link fading" href="https://travel.yandex.ru">Путешествия</a>
+          </li>
+        </ul>
+        <p class="footer__copyright">&copy; 2022. Дмитрий Пензев</p>
+      </div>
     </footer>
   </div>
 </body>
